# cbor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: main.yml
cmake/: Config.cmake.in  config.h.in  install_helper.cmake  package_helper.cmake
example/: CMakeLists.txt  client-server.cpp  main.cpp  simple.cpp
include/cbor/: buffer.h  cbor.h  decoding.h  encoding.h  error.h  library.h  type_traits.h
src/: buffer.cpp  decoding.cpp  encoding.cpp  error.cpp  library.cpp
test/: CMakeLists.txt
test/include/test/: decoding.h  encoding.h
test/src/: buffer.cpp  encoding.cpp  error.cpp  main.cpp
test/src/decoding/: arrays.cpp  byte_arrays.cpp  dictionaries.cpp  enums.cpp  floats.cpp  head.cpp  integers.cpp  reflection.cpp  simple_types.cpp  strings.cpp  variant.cpp
test/src/encoding/: array.cpp  boxed.cpp  custom_encode.cpp  float.cpp  misc.cpp  reflection.cpp  variant.cpp
